--- a/src/viz/public/index.html
+++ b/src/viz/public/index.html
@@ -10,6 +10,7 @@
     <script src="%PUBLIC_URL%/gen-js/scene_types.js" type="text/javascript" ></script>
     <script src="%PUBLIC_URL%/gen-js/shared_types.js" type="text/javascript" ></script>
     <script src="%PUBLIC_URL%/gen-js/task_types.js" type="text/javascript" ></script>
+    <script src="%PUBLIC_URL%/gen-js/collision_types.js" type="text/javascript" ></script>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
